--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,12 @@
 openai
-openai-agents
 streamlit
+langchain-community
+langchain
+langchain-openai
+langchain-text-splitters
+openpyxl
+beautifulsoup4
+litellm
+chromadb
+pypdf
 python-dotenv
-tavily
